; ModuleID = '/home/carl/AnghaBench/netdata/database/extr_rrdvar.c_rrdvar_free_remaining_variables.c'
source_filename = "/home/carl/AnghaBench/netdata/database/extr_rrdvar.c_rrdvar_free_remaining_variables.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64 }

@.str = private unnamed_addr constant [55 x i8] c"RRDVAR: INTERNAL ERROR: Cannot cleanup tree of RRDVARs\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rrdvar_free_remaining_variables(i32* %0, %struct.TYPE_6__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %4, align 8
  store i32* null, i32** %6, align 8
  br label %7

7:                                                ; preds = %23, %2
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to i32*
  store i32* %12, i32** %5, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %29

14:                                               ; preds = %7
  %15 = load i32*, i32** %5, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = icmp eq i32* %15, %16
  %18 = zext i1 %17 to i32
  %19 = call i64 @unlikely(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %14
  %22 = call i32 @error(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0))
  br label %29

23:                                               ; preds = %14
  %24 = load i32*, i32** %5, align 8
  store i32* %24, i32** %6, align 8
  %25 = load i32*, i32** %3, align 8
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %27 = load i32*, i32** %5, align 8
  %28 = call i32 @rrdvar_free(i32* %25, %struct.TYPE_6__* %26, i32* %27)
  br label %7

29:                                               ; preds = %21, %7
  ret void
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @error(i8*) #1

declare dso_local i32 @rrdvar_free(i32*, %struct.TYPE_6__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
